# tokenspeed

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  GLUON_AITER_DIRECT_M16_NOTES.md  GOVERNANCE.md  README.md  WORKLOG.md  task-progress-1.md  task-progress-2.md
python/: pyproject.toml  setup.py
python/tokenspeed/: __init__.py  _logging.py  bench.py  env.py  trace_merge.py
python/tokenspeed/cli/: __init__.py  __main__.py  _argsplit.py  _logo.py  _logprefix.py  _proc.py  serve_native.py  serve_smg.py  trace_merge.py
python/tokenspeed/runtime/: cache_capabilities.py  deepseek_v4_cache_capabilities.py  deepseek_v4_cache_tables.py  flat_cache_tables.py  flat_kv_metrics.py
python/tokenspeed/runtime/cache/: __init__.py  allocator.py  base_prefix_cache.py  deepseek_v4_cache_host.py  embedding_cache.py  flat_host_mirror.py  kv_cache_host.py  kvstore_controller.py  kvstore_storage.py  mamba_cache_host.py  prefix_cache.py  req_to_token_pool.py  routed_experts_pool.py  utils.py
python/tokenspeed/runtime/chat_templates/: inkling.jinja
python/tokenspeed/runtime/configs/: __init__.py  deepseek_v4_cache_spec.py  deepseek_v4_flat_memory_plan.py  device_config.py  engine_spec.py  flat_kv_contract.py  flat_memory_plan.py  inkling_config.py  load_config.py  minimax_m3_config.py  model_config.py  nemotron_h_config.py  paged_cache_spec.py  qwen3_5_config.py  qwen3_5_text_base_config.py  qwen3_asr_config.py
python/tokenspeed/runtime/disaggregation/: mooncake_transfer_engine.py  utils.py
python/tokenspeed/runtime/distributed/: comm_manager.py  comm_ops.py  dp_sampling_comm.py  dp_sampling_swap.py  mapping.py  process_group_manager.py  utils.py
python/tokenspeed/runtime/engine/: async_llm.py  collector.py  compute_log_probs.py  data_parallel_controller.py  detokenizer.py  event_loop.py  generation_output_processor.py  input_processor.py  io_struct.py  logprobs.py  memory_occupation.py  output_processor.py  pause.py  protocol.py  request_handler.py  request_stats.py  request_types.py  schedule_batch.py  scheduler_control_client.py  scheduler_utils.py
python/tokenspeed/runtime/entrypoints/: context.py  control_server.py  engine.py  engine_base.py  harmony_utils.py  http_server.py  sglang_compat_http.py  smg_grpc_server.py  tool.py  vllm_compat_http.py
python/tokenspeed/runtime/epd/: encode_executor.py  encode_loop.py  encode_scheduler.py  encode_worker.py  prefill_admission.py
python/tokenspeed/runtime/execution/: breakable_cuda_graph.py  cache_loc_kernel.py  context.py  cuda_graph_wrapper.py  distributed_initializer.py  factory.py  flat_kv_progress.py  forward_batch_info.py  graph_routing.py  input_buffer.py  model_executor.py  model_runner.py  nan_guard.py  prefill_graph.py  runtime_states.py  types.py  weight_loader.py
python/tokenspeed/runtime/grammar/: base_format_detector.py  capturable_grammar.py  deepseekv31_detector.py  deepseekv3_detector.py  function_call_parser.py  gpt_oss_detector.py  grammar_manager.py  kimik2_detector.py  minimax_m2.py  qwen3_coder_detector.py  qwen_detector.py  reasoning_structural_tag.py  utils.py  xgrammar_backend.py
python/tokenspeed/runtime/inputs/: code_completion_parser.py  conversation.py  harmony_parser.py  jinja_template_utils.py  template_manager.py
python/tokenspeed/runtime/layers/: activation.py  conv.py  deepseek_v4_mhc.py  layernorm.py  linear.py  logits_processor.py  paged_attention.py  parameter.py  rotary_embedding.py  utils.py  vocab_parallel_embedding.py
python/tokenspeed/runtime/lora/: lora_manager.py  lora_registry.py  moe_lora.py
python/tokenspeed/runtime/metrics/: collector.py
python/tokenspeed/runtime/model_loader/: loader.py  weight_utils.py
python/tokenspeed/runtime/models/: deepseek_nextn.py  deepseek_v3.py  deepseek_v4.py  deepseek_v4_fused_swiglu.py  deepseek_v4_mtp.py  dflash.py  dspark.py  extensible.py  glm5.py  glm5_nextn.py  gpt_oss.py  inkling.py  inkling_nextn.py  kimi_k25.py  llama.py  llama_eagle3.py  longcat_flash.py  (+16 more)
tokenspeed-kernel-ascend/: pyproject.toml
(+1223 files in other folders)
