# Copyright (c) 2026 LightSeek Foundation
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[build-system]
requires = ["setuptools==69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenspeed"
version = "0.1.0"
description = "TokenSpeed is a speed-of-light LLM inference engine."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "aiohttp",
    "compressed-tensors",
    "dill",
    "einops",
    "fastapi",
    "hf_transfer",
    "huggingface_hub",
    "modelscope",
    "msgspec",
    "ninja",
    "numpy",
    "openai==2.33.0",
    "openai-harmony",
    "orjson",
    "packaging",
    "partial-json-parser",
    "peft",
    "pillow",
    "prometheus-client",
    "psutil",
    "pybase64",
    "pybind11",
    "pydantic",
    "py-spy",
    "python-multipart",
    "pyzmq",
    "requests",
    "setproctitle",
    "tiktoken",
    "torch==2.11.0",
    "torchvision",
    "tqdm",
    "transformers==5.6.2",
    "uv",
    "uvicorn",
    "uvloop",
    "xgrammar==0.1.33",
    "viztracer",
]

[project.optional-dependencies]
serve = [
    # smg's TokenSpeed support (PR #1351) hasn't merged to smg-main yet, and
    # smg won't be cutting a fresh PyPI release that includes it. Pin both
    # packages to the same SHA on the feature branch so the gRPC proto
    # and RuntimeType enum stay in sync. Bump this SHA together with any
    # smg-side wire-contract change.
    #
    # Requires Rust toolchain + protoc at install time because maturin
    # builds smg_rs.abi3.so from source.
    #
    # Dev fallback (faster, no Rust install if the checkout is already
    # built):
    #   pip install -e ~/smg/bindings/python -e ~/smg/grpc_servicer
    "smg @ git+https://github.com/lightseekorg/smg.git@a1a6cd8f75996e0b3807a3780877e93454799372#subdirectory=bindings/python",
    "smg-grpc-servicer @ git+https://github.com/lightseekorg/smg.git@a1a6cd8f75996e0b3807a3780877e93454799372#subdirectory=grpc_servicer",
]

[project.scripts]
tokenspeed = "tokenspeed.cli:main"
ts = "tokenspeed.cli:main"
tokenspeed-serve = "tokenspeed.api_server:main"
ts-serve = "tokenspeed.api_server:main"

[project.urls]
"Homepage" = "https://github.com/lightseekorg/tokenspeed"

[tool.setuptools]
license-files = ["LICENSE", "THIRDPARTYNOTICES"]

[tool.setuptools.packages.find]
include = ["tokenspeed*"]
